--- a/app/src/main/res/drawable/main_background.xml
+++ b/app/src/main/res/drawable/main_background.xml
@@ -1,22 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-
-    <!-- Bottom white background -->
-    <item>
-        <shape android:shape="rectangle">
-            <solid android:color="#FFFFFF" /> <!-- White -->
-        </shape>
-    </item>
-
-    <!-- Top blue curved shape -->
-    <item android:top="0dp"
-        android:bottom="500dp">
-        <shape android:shape="rectangle">
-            <solid android:color="#2196F3" /> <!-- Blue -->
-            <corners android:bottomLeftRadius="100dp"
-                android:bottomRightRadius="100dp"
-                />
-        </shape>
-    </item>
-
-</layer-list>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <gradient
+        android:angle="135"
+        android:startColor="#f8f9fa"
+        android:centerColor="#ffffff"
+        android:endColor="#f1f3f4"
+        android:type="linear" />
+</shape>
