--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,12 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
-        android:angle="135"
-        android:centerColor="#009688"
-        android:endColor="#00695C"
-        android:startColor="#4DB6AC"
+        android:angle="90"
+        android:startColor="#2c3e50"
+        android:centerColor="#34495e"
+        android:endColor="#2c3e50"
         android:type="linear" />
+    <corners
+        android:topRightRadius="24dp"
+        android:bottomRightRadius="24dp" />
 </shape>
