--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -9,17 +9,17 @@
         android:id="@+id/nav_home"
         android:name="com.example.quizpractice.CategoryFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_category" />
+        tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_gallery"
         android:name="com.example.quizpractice.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:label="@string/menu_Leaderboard"
+        tools:layout="@layout/fragment_leader_board" />
 
     <fragment
         android:id="@+id/nav_slideshow"
         android:name="com.example.quizpractice.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:label="@string/menu_Profile"
+        tools:layout="@layout/fragment_account" />
 </navigation>
