--- a/app/src/main/res/drawable/circle_background.xml
+++ b/app/src/main/res/drawable/circle_background.xml
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <gradient
-        android:angle="45"
-        android:startColor="#ffffff"
-        android:centerColor="#f8f9fa"
-        android:endColor="#e9ecef"
-        android:type="radial"
-        android:gradientRadius="100dp" />
+    <solid android:color="@color/primaryDark" />
+    <corners android:radius="20dp" />
 </shape> 
