--- a/app/src/main/res/layout/activity_test_start.xml
+++ b/app/src/main/res/layout/activity_test_start.xml
@@ -8,126 +8,153 @@
     android:background="@drawable/gradient_background"
     tools:context=".test_startActivity">
 
+    <!-- Hero/Header section -->
+    <FrameLayout
+        android:id="@+id/header_container"
+        android:layout_width="0dp"
+        android:layout_height="220dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            android:src="@drawable/main_background"
+            android:alpha="0.35"/>
+
+        <TextView
+            android:id="@+id/app_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name1"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="22sp"
+            android:layout_gravity="center_horizontal|top"
+            android:layout_marginTop="40dp"/>
+    </FrameLayout>
 
     <TextView
         android:id="@+id/st_cty"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="16dp"
         android:text="Category"
-        android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="24sp"
+        android:textColor="@color/black"
+        android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        android:background="@drawable/round_cornor"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:paddingTop="6dp"
+        android:paddingBottom="6dp"
+        app:layout_constraintTop_toTopOf="@id/header_container"
+        app:layout_constraintBottom_toBottomOf="@id/header_container"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.71" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
         android:id="@+id/st_testNo"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginBottom="120dp"
-        android:text="Test No. 2"
+        android:text="Test No. 1"
         android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="18sp"
-        app:layout_constraintBottom_toTopOf="@+id/ll2"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@+id/header_container"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_marginTop="8dp"/>
 
     <LinearLayout
         android:id="@+id/ll2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-
+        android:layout_marginTop="12dp"
+        android:paddingStart="8dp"
+        android:paddingEnd="8dp"
         app:layout_constraintBottom_toTopOf="@+id/Startbutton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/st_testNo">
 
 
         <androidx.cardview.widget.CardView
             android:layout_width="120dp"
             android:layout_height="160dp"
-           app:cardElevation="5dp"
+            android:layout_margin="1dp"
+            app:cardElevation="8dp"
             app:cardUseCompatPadding="true"
-            app:cardCornerRadius="5dp"
+            app:cardCornerRadius="16dp"
             >
 
             <ImageView
                 android:layout_width="43dp"
                 android:layout_height="45dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginBottom="8dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="16dp"
                 android:src="@drawable/question" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="55dp"
-                android:gravity="center"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="70dp"
                 android:text="Question"
-                android:textSize="15dp"
-                android:textAlignment="center"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 android:textColor="@color/black"/>
 
-<TextView
-    android:id="@+id/st_totalQues"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="5"
-    android:layout_marginTop="100dp"
-    android:layout_marginLeft="50dp"
-    android:textColor="@color/black"
-    android:textStyle="bold"
+            <TextView
+                android:id="@+id/st_totalQues"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginLeft="50dp"
+                android:layout_marginBottom="8dp"
+                android:text="5"
+                android:textColor="@color/black"
+                android:textStyle="bold"
 
-    />
+                />
         </androidx.cardview.widget.CardView>
 
 
         <androidx.cardview.widget.CardView
             android:layout_width="120dp"
             android:layout_height="160dp"
-            app:cardCornerRadius="5dp"
-            app:cardElevation="5dp"
+            android:layout_margin="1dp"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="8dp"
             app:cardUseCompatPadding="true">
 
             <ImageView
                 android:layout_width="43dp"
                 android:layout_height="45dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginBottom="8dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="16dp"
                 android:src="@drawable/clock" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginTop="55dp"
-                android:gravity="center"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="70dp"
                 android:text="Time"
-                android:textAlignment="center"
                 android:textColor="@color/black"
-                android:textSize="15dp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/st_Time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginBottom="8dp"
                 android:layout_marginLeft="25dp"
-                android:layout_marginTop="100dp"
                 android:text="25 min"
                 android:textColor="@color/black"
                 android:textStyle="bold"
@@ -138,27 +165,26 @@
         <androidx.cardview.widget.CardView
             android:layout_width="120dp"
             android:layout_height="160dp"
-            app:cardElevation="5dp"
+            android:layout_margin="1dp"
+            app:cardElevation="8dp"
             app:cardUseCompatPadding="true"
-            app:cardCornerRadius="5dp"
+            app:cardCornerRadius="16dp"
             >
 
             <ImageView
                 android:layout_width="43dp"
                 android:layout_height="45dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginBottom="8dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="16dp"
                 android:src="@drawable/award" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="55dp"
-                android:gravity="center"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="70dp"
                 android:text="Best Score"
-                android:textSize="15dp"
-                android:textAlignment="center"
+                android:textSize="14sp"
                 android:textStyle="bold"
                 android:textColor="@color/black"/>
 
@@ -167,8 +193,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="80"
-                android:layout_marginTop="100dp"
-                android:layout_marginLeft="50dp"
+                android:layout_gravity="bottom"
+               android:layout_marginLeft="40dp"
+                android:layout_marginBottom="8dp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
 
@@ -206,21 +233,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
-    <!-- Grid of question numbers -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/st_question_grid"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/st_questions_header"
-        app:layout_constraintBottom_toTopOf="@+id/Startbutton"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        tools:listitem="@android:layout/simple_list_item_1"/>
-
 
     <Button
         android:id="@+id/Startbutton"
@@ -229,10 +241,14 @@
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="100dp"
-        android:text="Start"
+        android:text="Start Test"
+        android:textAllCaps="false"
         android:textColor="@color/white"
         android:background="@drawable/button_border"
-        android:textSize="22sp"
+        android:backgroundTint="@color/accent_green"
+        android:drawableStart="@drawable/ic_right"
+        android:drawablePadding="8dp"
+        android:textSize="18sp"
         android:elevation="5dp"
         android:translationZ="3dp"
         android:stateListAnimator="@null"
@@ -246,7 +262,14 @@
         android:id="@+id/st_backB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-android:layout_marginStart="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="16dp"
+        android:padding="8dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:contentDescription="Back"
+        android:elevation="8dp"
+        android:translationZ="8dp"
         android:src="@drawable/ic_back"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
