--- a/app/src/main/res/drawable/option_button_background.xml
+++ b/app/src/main/res/drawable/option_button_background.xml
@@ -4,10 +4,10 @@
     <!-- Selected State -->
     <item android:state_selected="true">
         <shape android:shape="rectangle">
-            <solid android:color="@color/accent_green" />
+            <solid android:color="@color/primary" />
             <stroke
                 android:width="2dp"
-                android:color="@color/accent_green" />
+                android:color="@color/primaryDark" />
             <corners android:radius="8dp" />
         </shape>
     </item>
@@ -18,7 +18,7 @@
             <solid android:color="@color/background_light" />
             <stroke
                 android:width="2dp"
-                android:color="@color/accent_blue" />
+                android:color="@color/primary" />
             <corners android:radius="8dp" />
         </shape>
     </item>
